Fix format and visibility

--- a/cms/server/admin/static/aws_themes.css
+++ b/cms/server/admin/static/aws_themes.css
@@ -165,14 +165,7 @@
 [data-theme="arkansas-black"] .modal__warning {
     background: hsl(0, 30%, 15%) !important;
     border-color: hsl(0, 40%, 25%) !important;
-}
-
-[data-theme="arkansas-black"] .modal__warning p {
-    color: hsl(0, 70%, 70%) !important;
-}
-
-[data-theme="arkansas-black"] .modal__warning div {
-    color: hsl(0, 60%, 65%) !important;
+    color: hsl(0, 65%, 75%) !important;
 }
 
 [data-theme="arkansas-black"] .swal2-popup {
